@@ -32,7 +32,7 @@ GH5.longName=Guitar Hero 5
 
 RB1.longName=Rock Band
 RB2.longName=Rock Band 2
-
+TBRB.longName=The Beatles: Rock Band
 
 GH1.wikiAbbr=GH1
 GH2.wikiAbbr=GH2
@@ -48,7 +48,7 @@ GH5.wikiAbbr=GH5
 
 RB1.wikiAbbr=RB
 RB2.wikiAbbr=RB2
-
+TBRB.wikiAbbr=TBRB
 
 GH1=
 GH2=
@@ -64,3 +64,4 @@ GH5=
 
 RB1=
 RB2=
+TBRB=
